Updates to scores and qset history stylesheets. Fixed homepage overflow issue.

--- a/src/components/homepage.scss
+++ b/src/components/homepage.scss
@@ -4,20 +4,20 @@
 
 	.main_container {
 		position: relative;
-		width: 100vw;
+		// width: 100vw;
+		width: 100%;
 		height: 600px;
 		margin: 0 auto;
-		overflow: visible;
 
 		background: #fff;
  		text-align: left;
 	
 		.store_main {
-			padding: 0px;
-			overflow: visible;
 			position: absolute;
 			left: 0;
 			display: block;
+			width: 100%;
+			padding: 0px;
 			transition: all 0.3s linear;
 
 			p {
@@ -29,7 +29,7 @@
 
 			section {
 				left: calc(50% - 50vw);
-				width: 100vw;
+				width: 98vw;
 				height: fit-content;
 			
 				padding: 30px 0px 100px;
@@ -87,7 +87,7 @@
 
 						.mobile_spotlight_banner {
 							visibility: visible;
-							width: calc(70% - 40px);
+							width: calc(50% - 40px);
 						}
 					}
 				}
@@ -102,7 +102,7 @@
 
 .front_bottom {
 	display: grid;
-	width: 100vw;
+	width: 100%;
 	background-color: #fbfbfb;
 	margin-bottom: 0;
 	padding-top: 65px;
